--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css?family=Rubik:400');
+@import url('https://fonts.googleapis.com/css?family=Rubik:900');
+
 html {
     overflow: hidden;
     color: white;
     background: black;
+    font-family: 'Rubik', sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 #container {
@@ -18,7 +24,7 @@ html {
 .circle {
     width: 500px;
     height: 500px;
-    background: black;
+    background: #070818;
     border-radius: 50%;
     transform: rotate(0deg);
     -webkit-transition: 100ms linear;
@@ -28,7 +34,53 @@ html {
     border: 2px solid white;
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+.two {
+    transform: rotate(180deg)
+}
+.middle {
+    flex: 1;
+}
+
+#one .logo {
+    height: 80vh;
+    width: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    background: black;
+    box-shadow: inset 0px 0px 220px 0px #121452;
+    border-radius: 50%;
+}
+
+#one .logo h1 {
+    font-size:10vw;
+    animation-name: normalFadeIn;
+    animation-duration: 4s;
+}
+
+#one .logo h2 {
+    font-weight: 400;
+    font-size:4vw;
+}
+
+.logo .the {
+    margin-top:-4vw;
+    margin-right:-4vw;
+    animation-name: leftFadeIn;
+    animation-duration: 3s;
+}
+.logo .project {
+    margin-top:14vw;
+    margin-left:-10vw;
+    animation-name: rightFadeIn;
+    animation-duration: 3s;
+}
+
 
 .section {
     position: absolute;
@@ -40,6 +92,7 @@ html {
     justify-content: center;
 }
 
+
 .secondSec {
     transform: translateY(-50%) rotate(45deg);
 }
@@ -50,10 +103,18 @@ html {
     transform: translateY(-50%) rotate(135deg);
 }
 
-.two {
-    transform: rotate(180deg)
-}
 
-.middle {
-    flex: 1;
+
+@keyframes normalFadeIn {
+    0% {opacity: 0;}
+    25% {opacity: 0;}
+    100% {opacity: 1;}
+}
+@keyframes leftFadeIn {
+    0% {opacity: 0; margin-right:-8vw;}
+    100% {opacity: 1; margin-right:-4vw;}
+}
+@keyframes rightFadeIn {
+    0% {opacity: 0; margin-left:-14vw;}
+    100% {opacity: 1; margin-left:-10vw;}
 }
