--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,23 @@ html {
     justify-content: center;
 }
 
+.littleCircle {
+    width: 5vw;
+    height:5vw;
+    box-shadow: inset 0px 0px 1vw 0px #121452;
+    background: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    -webkit-transition: 500ms linear;
+}
+
+.littleCircle:hover {
+    width:10vw;
+    height:10vw;
+    border-radius: 5px;
+}
 
 .secondSec {
     transform: translateY(-50%) rotate(45deg);
