--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,16 @@ html {
     font-size:4vw;
 }
 
+
+
+#one nav {
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .logo .the {
     margin-top:-4vw;
     margin-right:-4vw;
@@ -101,6 +111,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
     -webkit-transition: 500ms linear;
 }
 
@@ -108,6 +119,19 @@ html {
     width:10vw;
     height:10vw;
     border-radius: 5px;
+}
+
+.c1 {
+    margin-left:40vh;
+}
+.c2 {
+    margin-left:-40vh;
+}
+.c3 {
+    margin-top:-40vh;
+}
+.c4 {
+    margin-top:40vh;
 }
 
 .secondSec {
