--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ button {
 }
 
 .box {
-    border: 2px solid white;
     width: 100vw;
     height: 100vh;
     
@@ -469,6 +468,10 @@ button {
     from {transform: perspective(100em) rotateX(-45deg) rotateY(45deg)}
     to {transform: perspective(100em) rotateX(315deg) rotateY(-315deg) scale(1.5)}
   }
+  @-webkit-keyframes scale {
+    from {transform: scale(1);}
+    to {transform: scale(1.25)}
+  }
 
 
 
@@ -572,9 +575,328 @@ header h1 {
 }
 
 #seven main {
-    background: purple;
     grid-area: APPmn;
+    display: grid;
 }
+
+#seven main article {
+    margin: auto;
+    width: 30vw;
+    height: 45vw;
+    border-radius: 8px;
+    background: black;
+    border-bottom: 1vw solid black;
+    display: flex;
+}
+#seven main article .appContainer {
+    margin: auto;
+    width:95%;
+    height: 95%;
+    background-color: #05090b;
+    overflow: hidden;
+    position: relative;
+    
+}
+.appIndex {
+    width: 100%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    background-image: url('/img/app_index.png');
+    background-size: 100% 100%;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.appIndex:hover {
+    cursor: pointer;
+}
+
+.appContainer .appIndex .movingCircle {
+    width: calc(15vw * var(--multiplier));
+    height:calc(15vw * var(--multiplier));
+    margin-top: 2.5vw;
+}
+.appIndex img {
+    width: 30%;
+    animation: scale alternate 15s infinite;
+}
+.appIndex h1 {
+    font-size: 4vw;
+    letter-spacing: 1vw;
+    margin-top: -7vw;
+    margin-bottom: 8vw;
+}
+
+
+.appMenu {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.appMenu nav {
+    height: 7.5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.appMenu nav div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
+.appMenu nav div p {
+    font-size: 1.2vw;
+    padding-right: .5vw;
+}
+.appMenu nav img {
+    height: 100%;
+    width: auto;
+    cursor: pointer;
+}
+
+
+.appMenu header {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.appMenu header h1 {
+    font-size: 3vw;
+    letter-spacing: 1vw;
+    margin: 0px;
+}
+.appMenu header h2 {
+    margin: 0px;
+    font-size: 2vw;
+    letter-spacing: .75vw;
+}
+
+#seven .appMenu main {
+    flex: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+}
+.appMenu main .mainCircle {
+    width: 20vw;
+    height: 20vw;
+    border: 2px solid #4A88DA;
+    border-radius: 50%;
+    background-color: #1C2936;
+    z-index: 2;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.mainCircle .appCircle {
+    width: 15%;
+    height: 15%;
+    border: 1px solid #9579DA;
+    border-radius: 50%;
+    background-color: #151E27;
+    position: absolute;
+    transform: translateX(-50%) translateY(-50%);
+}
+.mainCircle #littleOne {
+    left: 0%;
+    top: 50%;
+}
+.mainCircle #littleTwo {
+    left: 100%;
+    top: 50%;
+}
+.mainCircle #littleThree {
+    left: 50%;
+    top: 100%;
+}
+.mainCircle .shield {
+    width: 25%;
+    height: 25%;
+    background-image: url(/img/shield_color.svg);
+    background-size: 110% 100%;
+    transform: translateY(-50%) translateX(-50%);
+    display: flex;
+    position: absolute;
+    left: 50%;
+    top: 0%;
+}
+.mainCircle .shield:hover {
+    height: 30%;
+    cursor: pointer;
+    -webkit-transition: 100ms;
+}
+
+.playArrow {
+    margin: auto;
+    width: 0;
+    height: 0;
+    border-top: 1vw solid transparent;
+    border-bottom: 1vw solid transparent;
+    border-left: 2vw solid #B4DF80;
+    transform: translateX(25%);
+}
+
+.appCon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+}
+.appCon .appImg {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.appCon .appImg img {
+    margin-left: 10%;
+    width: 60%;
+}
+.appCon .appText {
+    width: 55%;
+    padding-right: 7.5%;
+}
+.appCon .appText h1 {
+    font-size: 2vw;
+    font-weight: 500;
+    margin-bottom: -0.5vw;
+}
+.appCon .appText p {
+    font-size: 0.8vw;
+}
+
+
+.appMenu footer, .appGame footer {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #8C8C8C;
+}
+.appMenu footer h1, .appGame footer h1 {
+    font-size: 2.5vw;
+    font-weight: 600;
+}
+.appMenu footer h2, .appGame footer h2 {
+    font-size: 1vw;
+    font-weight: 500;
+}
+.appMenu footer .the, .appGame footer .the {
+    margin-top: -1.1vw;
+    margin-right: -1vw;
+}
+.appMenu footer .project, .appGame footer .project {
+    margin-top: 4vw;
+    margin-left: -2vw;
+}
+
+
+
+.appGame {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/img/app_index.png');
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+}
+
+.appGame header {
+    height: 20%;
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+.appGameButton {
+    margin: auto;
+    width: 40%;
+    height: 30%;
+    background-color: #AC92EA;
+    box-shadow: 0px 4px 0px #9579da;
+    border-radius: 8px;
+    display: flex;
+}
+
+.appGameButton h2 {
+    font-size: 1.5vw;
+    font-weight: 500;
+    margin: auto;
+    text-transform: uppercase;
+}
+
+#seven .appGame main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.appGame main h2 {
+    font-size: 2vw;
+}
+.appGame main h1 {
+    margin-top: 10%;
+    font-size: 3vw;
+}
+
+.appGame main div {
+    display: flex;
+    flex-direction: row;
+}
+.appGame main input {
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border: none;
+    height: calc(2vw * var(--multiplier));
+    width: calc(7vw * var(--multiplier));
+    box-shadow: 0px 4px 0px #b4b4b4;
+    padding-left: 5px;
+    font-size: calc(1vw * var(--multiplier));
+    margin-right:calc(0.25vw * var(--multiplier));
+}
+.appGame main button {
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    height: calc(2vw * var(--multiplier));
+    width: calc(3vw * var(--multiplier));
+    background-color: #b4df80;
+    box-shadow: 0px 7px 0px #89c053;
+}
+
+.appGameButton:hover, .appGame main button:hover {
+    cursor: pointer;
+    transform: scale(0.95);
+    -webkit-transition: 100ms;
+}
+
+@media screen and (max-width: 1100px) {
+    #seven {
+        width: 100vw;
+        overflow-y: scroll;
+        display: grid;
+        grid-template-areas: 
+            'APPhd'
+            'APPse'
+        ;
+        grid-template-rows: 150px 1fr;
+        grid-template-columns: 1fr;
+    }
+    #seven main {
+        display: none;
+    }
+}
+
 
 
 
@@ -583,11 +905,10 @@ header h1 {
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 #seven section article {
     width: 80%;
-    height:80%;
+    height:90%;
     background: #1f2b33;
     box-shadow: inset 0px 0px 10px 0px black;
     border-radius:16px;
@@ -602,7 +923,7 @@ header h1 {
     position: relative;
 }
 #seven section article .mrContainer div {
-    height: 25vh;
+    height: 35vh;
 }
 
 #seven .mrContainer div::-webkit-scrollbar-thumb {
